@@ -107,6 +107,7 @@ Bugs fixed
 - Bug 2744 - 802.11n/ac with RTS/CTS is crashing for a large number of nodes
 - Bug 2758 - IPv4 sockets bound to unicast receive also subnet-directed broadcasts
 - Bug 2759 - Packets sent to broadcast address are converted to subnet-directed broadcast
+- Bug 2760 - OLSR uses unicast-bound sockets to receive broadcasts
 
 Known issues
 ------------
